@@ -1,5 +1,6 @@
 2018-0x-xx 1.5.0 [xxxxxxx]
   + ...
+  . Database format changed, up- and downwards compatible.
 2018-05-11 1.4.0 [66861a9]
   + relationships can connect to ports
   + the repair-database function can detect and repair broken focused_feature keys in diagramelements
